--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+}
+
 input {
   border-radius: 10px;
+}
+
+form {
+  margin: auto;
+  text-align: center;
+}
+
+a:link {
+  position: absolute;
 }
