--- a/style.css
+++ b/style.css
@@ -1,20 +1,33 @@
 html,
-body {
-  width: 100%;
+body,
+.container {
   height: 100%;
+  width: 100%;
+  box-sizing: border-box;
   margin: 0;
-  display: flex;
+  padding: 0;
 }
 
-input {
-  border-radius: 10px;
+.item {
+  border: 5px solid black;
+  background-color: gray;
+  margin: 5px;
+}
+.item1 {
+  grid-column: 3 / 5;
+  grid-row: 1 / 2;
+  text-align: right;
 }
 
-form {
-  margin: auto;
-  text-align: center;
+.item2 {
+  grid-column: 1 / 5;
+  grid-row: 1 / 5;
+  align-self: center;
+  justify-self: center;
 }
 
-a:link {
-  position: absolute;
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(4, 25%);
 }
