--- a/style.css
+++ b/style.css
@@ -8,11 +8,19 @@ body,
   padding: 0;
 }
 
-.item {
-  border: 5px solid black;
-  background-color: gray;
-  margin: 5px;
+input[type="text"] {
+  height: 20px;
+  margin: 10px;
+  box-shadow: 0 2px grey;
+  border-radius: 20px;
 }
+input[type="text"]:hover {
+  height: 20px;
+  margin: 10px;
+  box-shadow: 0 3px grey;
+  border-radius: 20px;
+}
+
 .item1 {
   grid-column: 3 / 5;
   grid-row: 1 / 2;
@@ -22,6 +30,7 @@ body,
 .item2 {
   grid-column: 1 / 5;
   grid-row: 1 / 5;
+  text-align: center;
   align-self: center;
   justify-self: center;
 }
