--- a/style.css
+++ b/style.css
@@ -11,25 +11,24 @@ body,
 input[type="text"] {
   height: 20px;
   margin: 10px;
-  box-shadow: 0 2px grey;
   border-radius: 20px;
+  box-shadow: 0 1px grey;
 }
 input[type="text"]:hover {
-  height: 20px;
-  margin: 10px;
-  box-shadow: 0 3px grey;
-  border-radius: 20px;
+  box-shadow: 0 2px grey;
 }
 
 .item1 {
-  grid-column: 3 / 5;
-  grid-row: 1 / 2;
+  background-color: aqua;
+  grid-column: 1 / 3;
+  grid-row: 1 / 1;
   text-align: right;
 }
 
 .item2 {
-  grid-column: 1 / 5;
-  grid-row: 1 / 5;
+  background-color: aqua;
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
   text-align: center;
   align-self: center;
   justify-self: center;
@@ -37,6 +36,6 @@ input[type="text"]:hover {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(4, 25%);
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(2, 50%);
 }
