--- a/style.css
+++ b/style.css
@@ -1,41 +1,135 @@
+/*global CSS*/
+
 html,
 body,
 .container {
+  box-sizing: border-box;
   height: 100%;
   width: 100%;
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: arial, sans-serif;
+  color: rgba(0, 0, 0, 0.87);
 }
-
-input[type="text"] {
-  height: 20px;
+a:link {
+  text-decoration: none;
   margin: 10px;
-  border-radius: 20px;
-  box-shadow: 0 1px grey;
 }
-input[type="text"]:hover {
-  box-shadow: 0 2px grey;
+a:link:hover {
+  text-decoration: underline;
 }
 
-.item1 {
-  background-color: aqua;
-  grid-column: 1 / 3;
-  grid-row: 1 / 1;
+.search-bar {
+  margin-bottom: 10px;
+  border: none;
+  height: 44px;
+  width: 690px;
+  background: #fff;
+  border: 1px solid;
+  border-color: rgba(118, 118, 118, 0.3);
+  border-radius: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.search-bar:hover {
+  box-shadow: 0 2px 8px 1px rgb(64 60 67 / 24%);
+  border-color: rgba(223, 225, 229, 0);
+}
+
+.search-bar > * {
+  margin: 10px;
+}
+
+.text-input {
+  width: 630px;
+  height: 42px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background-color: transparent;
+}
+.advanced-text-input {
+  border-radius: 1px;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  outline: none;
+  font-size: 13px;
+  height: 25px;
+  padding: 1px 8px;
+}
+svg {
+  height: 20px;
+  line-height: 20px;
+  width: 20px;
+  opacity: 0.3;
+}
+
+input[type="submit"] {
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  font-size: 14px;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  border: 1px solid #dadce0;
+  color: #202124;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+.box1 {
+  margin: 10px;
+  margin-bottom: auto;
+  align-self: stretch;
   text-align: right;
 }
 
-.item2 {
-  background-color: aqua;
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
+.box2 {
+  position: absolute;
   text-align: center;
-  align-self: center;
-  justify-self: center;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  grid-template-rows: repeat(2, 50%);
+.box3 {
+  width: calc(100% - 80px);
+  position: absolute;
+  padding: 40px;
+}
+
+th {
+  height: 50px;
+}
+table tr td:last-child {
+  text-align: right;
+}
+
+.advanced-search {
+  color: #fff !important;
+  background-color: #357ae8;
+  background-image: -webkit-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -moz-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -ms-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -o-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: linear-gradient(top, #4d90fe, #357ae8);
+  border: 1px solid #2f5bb7;
 }
