--- a/style.css
+++ b/style.css
@@ -60,8 +60,16 @@ a:link:hover {
   border-top: 1px solid #c0c0c0;
   outline: none;
   font-size: 13px;
+  max-width: 554px;
   height: 25px;
   padding: 1px 8px;
+}
+.advanced-text-input:focus {
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+  border: 1px solid #4d90fe;
+  outline: none;
 }
 svg {
   height: 20px;
@@ -110,16 +118,27 @@ input:-webkit-autofill:active {
   text-align: center;
 }
 
+h1,
+hr {
+  color: #d93025;
+  font-size: 20px;
+  font-weight: lighter;
+  margin-bottom: 35px;
+}
+
 .box3 {
   width: calc(100% - 80px);
   position: absolute;
   padding: 40px;
+  font-size: 13px;
+}
+/*Table*/
+
+tr {
+  height: 40px;
 }
 
-th {
-  height: 50px;
-}
-table tr td:last-child {
+td:last-child {
   text-align: right;
 }
 
